# haiai

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  INTEGRATION_SECURITY_REMEDIATION_PLAN.md  LICENSE  LICENSE-APACHE  LINES_OF_CODE.md  Makefile  QA_REVIEW.md  README.md  RELEASING.md  agents.md  install.sh  package-lock.json
python/: .gitignore  README.md  conftest.py  jacs.config.json  pyproject.toml
python/examples/: a2a_quickstart.py  hai_quickstart.py  mcp_quickstart.py
python/jacs_data/agent/: 794cbbcf-7f90-4a06-a1b3-d3acd0c17c91:687d90d4-66d9-4ec6-8846-580335e50a14.json
python/jacs_keys/: jacs.private.pem.enc  jacs.public.pem
python/scripts/: embed_binary.py
python/src/haiai/: __init__.py  __main__.py  _binary.py  _client_shared.py  _ffi_adapter.py  _optional.py  _retry.py  _sse.py  a2a.py  agent.py  agentsdk.py  async_client.py  cli.py  client.py  config.py  crewai.py  crypt.py  errors.py  hash.py  integrations.py  langgraph.py  mcp.py  mcp_server.py  mime.py  models.py  signing.py
python/src/haisdk/: __init__.py  __main__.py  _optional.py  a2a.py  agentsdk.py  async_client.py  cli.py  client.py  config.py  crewai.py  crypt.py  errors.py  integrations.py  langgraph.py  mcp.py  mcp_server.py  models.py  signing.py
python/src/jacs/hai/: __init__.py  __main__.py  _sse.py  async_client.py  cli.py  client.py  config.py  crypt.py  errors.py  mcp_server.py  models.py  signing.py
python/tests/: conftest.py  test_a2a.py  test_a2a_contract.py  test_a2a_fixtures.py  test_async_email.py  test_async_parity.py  test_audit_fixes.py  test_binary.py  test_cli_passthrough.py  test_client.py  test_client_security.py  test_config.py  test_contract.py  test_contract_endpoints.py  test_cross_lang_contract.py  test_cross_lang_media.py  test_email.py  test_email_conformance.py  test_email_integration.py  test_errors.py  test_ffi_adapter.py  test_ffi_integration.py  test_ffi_native_smoke.py  test_hai_url_optional.py  test_integrations.py  test_jacs_document_store_ffi.py  test_key_cache.py  test_key_integration.py  test_key_lookups.py  test_key_rotation.py  test_mcp_parity.py  test_mcp_server.py  test_mcp_tool_contract.py  test_mime.py  test_models.py  test_namespace_imports.py  test_path_escaping.py  test_raw_email.py  test_required_param_validation.py  test_retry_constants.py  (+8 more)
rust/: Cargo.toml
rust/hai-binding-core/: Cargo.toml  README.md  methods.json
rust/hai-binding-core/src/: lib.rs
rust/hai-mcp/: Cargo.toml  README.md
rust/hai-mcp/src/: context.rs  embedded_provider.rs  hai_tools.rs  launch.rs  lib.rs  main.rs  server.rs
rust/hai-mcp/tests/: integration.rs  plugin_validation.rs
rust/haiai/: .gitignore  Cargo.toml  README.md
rust/haiai-cli/: Cargo.toml  README.md
rust/haiai-cli/src/: main.rs  media_cmds.rs
rust/haiai-cli/tests/: cli_image_tests.rs  cli_integration.rs  cli_text_tests.rs
rust/haiai-cli/tests/common/: mod.rs
rust/haiai-wasm/: Cargo.toml  README.md
rust/haiai-wasm/src/: browser_agent.rs  errors.rs  events.rs  lib.rs
rust/haiai-wasm/tests/: parity_snapshot.rs  secret_leak.rs  sendsignedemail_flow.rs  storage_errors.rs  streams_iteration.rs
rust/haiai/docs/knowledge/haiai-guides/: adr-crypto-delegation.md  agents.md  claude.md  cli-parity-audit.md  development.md  parity-map.md  skill-definition.md
rust/haiai/docs/knowledge/haiai-sdk/: fixtures.md  go.md  hai-mcp.md  haiai-cli.md  haiai.md  node.md  python.md  root.md
rust/haiai/docs/knowledge/schemas/: BenchmarkJob.json  HaiConfig.json  (+1 more)
rust/haiai/documents/: 3ba521fa-f42b-4c3c-b6ed-f0825fd88205:c14a3d82-064a-4783-989b-9a9b66929351.json  87d411a6-7c57-43e6-b0d2-b94284823e2a:21b12545-2ad9-4ebd-8779-07d05bc80474.json  ed3bbc4f-ff7e-4c7f-b25c-366d580c0201:69679f5d-2101-400a-87a5-ccbc8f785d6d.json
rust/haiai/examples/: regen_raw_email_fixture.rs
rust/haiai/src/: a2a.rs  agent.rs  backoff.rs  client.rs  config.rs  config_browser.rs  document_store.rs  email.rs  email_inline.rs  error.rs  jacs.rs  jacs_local.rs  jacs_remote.rs  jacs_wasm.rs  key_format.rs  lib.rs  mime.rs  self_knowledge.rs  self_knowledge_data.rs  sse_parse.rs  sse_wasm.rs  transport.rs  types.rs  validation.rs  verify.rs  ws_protocol.rs  ws_wasm.rs
rust/haiai/tests/: a2a_contract.rs  a2a_facade.rs  a2a_mediated_flow.rs  benchmark_orchestration.rs  config_email_signing.rs  contract_endpoints.rs  contract_test.rs  cross_lang_contract.rs  crypto_delegation_contract.rs  dns_public_key_hash.rs  email_conformance.rs  email_integration.rs  email_methods.rs  email_skip_roundtrip.rs  html_inline_dyn_provider.rs  html_inline_email_assets.rs  init_contract.rs  init_suite.rs  jacs_remote_integration.rs  jacs_remote_signing_round_trip.rs  jacs_remote_tracing.rs  local_media.rs  local_text_document.rs  path_escaping.rs  raw_email.rs  regen_media_fixtures.rs  reply_threading.rs  transport_parity.rs  verification_endpoints.rs  verify_document.rs  verify_link.rs  wasm_compat_fixtures.rs  wasm_cross_compat_native.rs
rust/haiigo/: Cargo.toml  cbindgen.toml  haiigo.h
rust/haiigo/src/: lib.rs
rust/haiinpm/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
rust/haiinpm/src/: lib.rs
rust/haiipy/: Cargo.toml  pyproject.toml
rust/haiipy/src/: lib.rs
rust/haisdk/: .gitignore  Cargo.toml  README.md
rust/haisdk-cli/: Cargo.toml
rust/haisdk-cli/src/: main.rs
rust/haisdk-cli/tests/: cli_integration.rs
rust/haisdk/documents/: 653d7c36-9401-486e-b65d-0806c4fb9374:73465ccc-5f93-402b-9bae-937390c6f007.json
rust/haisdk/src/: a2a.rs  client.rs  config.rs  email.rs  error.rs  jacs.rs  jacs_local.rs  lib.rs  types.rs  verify.rs
rust/haisdk/tests/: a2a_contract.rs  a2a_facade.rs  a2a_mediated_flow.rs  benchmark_orchestration.rs  contract_endpoints.rs  contract_test.rs  cross_lang_contract.rs  email_conformance.rs  email_integration.rs  email_methods.rs  email_verify.rs  init_contract.rs  init_suite.rs  path_escaping.rs  reply_threading.rs  transport_parity.rs  verification_endpoints.rs  verify_document.rs  verify_link.rs
(+305 files in other folders)
