[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haiai"
version = "0.1.7"
description = "Python SDK for the HAI.AI agent benchmarking platform -- JACS-signed identity, SSE/WS transport, and benchmark orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0 OR MIT"
authors = [{ name = "HAI.AI", email = "engineering@hai.io" }]
dependencies = [
    "jacs==0.9.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
ws = ["websockets>=12.0"]
sse = ["httpx-sse>=0.4.0"]
dns = ["dnspython>=2.4"]
langchain = ["jacs[langchain]"]
langgraph = ["jacs[langgraph]"]
crewai = ["jacs[crewai]"]
anthropic = ["jacs[anthropic]"]
fastapi = ["jacs[fastapi]"]
mcp = ["jacs[mcp]", "mcp>=1.0.0"]
agentsdk = ["jacs"]
a2a = ["jacs[a2a]"]
all = ["haiai[ws,sse,dns,langchain,langgraph,crewai,anthropic,fastapi,mcp,agentsdk,a2a]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=2.3", "respx>=0.22"]

[project.scripts]
haiai = "haiai._binary:main"

[project.urls]
Homepage = "https://hai.ai"
Documentation = "https://hai.ai/docs/sdk/python"
Repository = "https://github.com/HumanAssisted/haiai"

[tool.hatch.build.targets.wheel]
packages = ["src/haiai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
