[workspace]
members = ["haiai", "hai-mcp", "haiai-cli", "hai-binding-core", "haiinpm", "haiipy", "haiigo"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["HAI.AI <engineering@hai.ai>"]
repository = "https://github.com/HumanAssisted/haiai"
homepage = "https://hai.ai"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
percent-encoding = "2.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "http2", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "sync"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

# Local development: uncomment to build against ../JACS instead of crates.io.
# CI/publish: this MUST be commented out. JACS must be published first.
# [patch.crates-io]
# jacs = { path = "../../JACS/jacs" }
# jacs-binding-core = { path = "../../JACS/binding-core" }
# jacs-mcp = { path = "../../JACS/jacs-mcp" }
