[package]
name = "hai-binding-core"
version = "0.4.1"
description = "Shared binding core for HAI SDK FFI (Python, Node, Go)"
readme = "README.md"
keywords = ["hai", "jacs", "agent", "ffi", "binding"]
categories = ["api-bindings"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
haiai = { version = "=0.4.1", path = "../haiai" }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
regex = "1"
tempfile = "3"
# Used to generate test PNG bytes for media-signing wrapper tests (Layer 8).
image = { version = "0.25", default-features = false, features = ["png"] }
# Used to mock /api/v1/records for the doc-store wrapper tests (TASK_001).
# Version pinned to match `rust/haiai/Cargo.toml` so cargo resolves a single
# httpmock crate across the workspace.
httpmock = "0.8"
