[package]
name = "hai-mcp"
version = "0.1.2"
description = "HAIAI MCP server: extends jacs-mcp with HAI.AI platform tools"
readme = "README.md"
keywords = ["hai", "mcp", "agent", "sdk"]
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
haiai = { version = "=0.1.2", path = "../haiai" }
jacs = "=0.9.4"
jacs-binding-core = "=0.9.4"
jacs-mcp = { version = "=0.9.4", features = ["mcp"] }
anyhow = "1"
base64.workspace = true
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
