[package]
name = "hai-mcp"
version = "0.1.9"
description = "HAIAI MCP server: extends jacs-mcp with HAI.AI platform tools"
readme = "README.md"
keywords = ["hai", "mcp", "agent", "sdk"]
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
haiai = { version = "=0.1.9", path = "../haiai" }
jacs = { version = "=0.9.11", features = ["a2a"] }
jacs-binding-core = "=0.9.11"
jacs-mcp = { version = "=0.9.11", features = ["mcp", "full-tools"] }
anyhow = "1"
base64.workspace = true
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid.workspace = true

[dev-dependencies]
regex = "1"
tempfile = "3"
