[package]
name = "haiai-cli"
version = "0.2.3"
description = "HAIAI CLI: command-line interface for HAI.AI agent SDK"
readme = "README.md"
keywords = ["hai", "jacs", "agent", "cli", "mcp"]
categories = ["command-line-utilities"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "haiai"
path = "src/main.rs"

[dependencies]
hai-mcp = { version = "=0.2.3", path = "../hai-mcp" }
haiai = { version = "=0.2.3", path = "../haiai" }
jacs = { version = "=0.10.0", features = ["keychain"] }
jacs-mcp = { version = "=0.10.0", features = ["mcp"] }
anyhow = "1"
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
serde.workspace = true
serde_json = "1"
reqwest = { workspace = true, features = ["rustls"] }
chrono = "0.4"
rpassword = "7"
atty = "0.2"
percent-encoding.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
