[package]
name = "haiai"
version = "0.4.1"
description = "Rust SDK for HAI.AI agent benchmarking, designed as a JACS-delegating wrapper"
readme = "README.md"
keywords = ["hai", "jacs", "agent", "benchmark", "sdk"]
categories = ["api-bindings", "network-programming"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["rustls-tls", "jacs-crate"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
jacs-crate = ["dep:jacs"]
agreements = ["jacs-crate", "jacs/agreements"]
attestation = ["jacs-crate", "jacs/attestation"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
percent-encoding.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = { version = "0.3", optional = true }
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
futures-util = "0.3"
tokio-tungstenite = "0.28"
url.workspace = true
uuid.workspace = true
tracing = "0.1"
tempfile = "3"
bm25 = { version = "2.3", features = ["default_tokenizer"] }
jacs = { version = "=0.10.1", optional = true, features = ["a2a"] }
# Issue 014: real JACS-chunk parser for `store_image_file` pre-flight check.
# The previous substring heuristic accepted any unsigned bytes containing the
# literal `jacsSignature` substring, leading to wasted round-trips and a
# maintenance footgun (SDK accepts what server rejects). The real extractor
# is the single source of truth for "does this image carry a JACS signature".
jacs-media = "=0.10.1"

[dev-dependencies]
httpmock = "0.8"
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
# Used to generate test PNG/JPEG bytes for media-signing tests.
# WebP fixtures are hand-built RIFF containers (no external encoder).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
