[package]
name = "haiai"
version = "0.4.1"
description = "Rust SDK for HAI.AI agent benchmarking, designed as a JACS-delegating wrapper"
readme = "README.md"
keywords = ["hai", "jacs", "agent", "benchmark", "sdk"]
categories = ["api-bindings", "network-programming"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["rustls-tls", "jacs-crate"]
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
jacs-crate = ["dep:jacs"]
agreements = ["jacs-crate", "jacs/agreements"]
attestation = ["jacs-crate", "jacs/attestation"]
# Browser-side build profile (HAIAI_WASM_PRD.md §4.2). Mutually exclusive
# with `jacs-crate` — enforced by a `compile_error!` in `src/lib.rs`.
# Today this only pulls `serde_json_canonicalizer` so the existing canonical
# JSON helper in `src/jacs.rs` has a working impl when `jacs-crate` is off.
# Task 008 wires the rest of the wasm-only deps (wasm-bindgen-futures,
# web-sys, js-sys, gloo-timers, jacs-core, jacs-wasm) under this feature.
# Activated via
#   cargo check -p haiai --no-default-features --features wasm \
#                        --target wasm32-unknown-unknown
wasm = ["serde_json_canonicalizer"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
percent-encoding.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = { version = "0.3", optional = true }
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
futures-util = "0.3"
html5ever = "0.35"
tokio-tungstenite = "0.28"
url.workspace = true
uuid.workspace = true
tracing = "0.1"
tempfile = "3"
bm25 = { version = "2.3", features = ["default_tokenizer"] }
jacs = { version = "=0.10.2", optional = true, features = ["a2a"] }
# Issue 014: real JACS-chunk parser for `store_image_file` pre-flight check.
# The previous substring heuristic accepted any unsigned bytes containing the
# literal `jacsSignature` substring, leading to wasted round-trips and a
# maintenance footgun (SDK accepts what server rejects). The real extractor
# is the single source of truth for "does this image carry a JACS signature".
jacs-media = "=0.10.2"

# reqwest is target-split per HAIAI_WASM_PRD.md §4.2 / §4.8. The native
# build keeps the workspace entry's full feature set (json, http2, query,
# multipart) plus `stream` for SSE / get_raw_email. The wasm32 build is
# restricted to `["json"]` (default-features off) — reqwest's wasm shim
# uses `fetch()` and supports nothing else from the native feature list.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["stream"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }

[dev-dependencies]
httpmock = "0.8"
mail-parser = "0.11"
tokio.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
# Used to generate test PNG/JPEG bytes for media-signing tests.
# WebP fixtures are hand-built RIFF containers (no external encoder).
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
