[package]
name = "haiinpm"
version = "0.1.8"
description = "Node.js napi-rs binding for HAI SDK"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hai-binding-core = { path = "../hai-binding-core" }
haiai = { path = "../haiai" }
napi = { version = "2", features = ["async", "napi8"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
