[package]
name = "haiipy"
version = "0.2.1"
description = "Python PyO3 binding for HAI SDK"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "haiipy"
crate-type = ["cdylib"]

[dependencies]
hai-binding-core = { path = "../hai-binding-core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
