[package]
name = "haisdk"
version = "0.1.0"
description = "Rust SDK for HAI.AI agent benchmarking, designed as a JACS-delegating wrapper"
readme = "README.md"
keywords = ["hai", "jacs", "agent", "benchmark", "sdk"]
categories = ["api-bindings", "network-programming"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["rustls-tls", "jacs-crate"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
jacs-crate = ["dep:jacs"]
jacs-local = ["dep:jacs_local_path"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
percent-encoding.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer = "0.3"
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
futures-util = "0.3"
tokio-tungstenite = "0.24"
url.workspace = true
uuid.workspace = true
jacs = { version = "0.8.0", optional = true }
jacs_local_path = { package = "jacs", path = "../../../JACS/jacs", optional = true }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tokio.workspace = true
